# 42-ft-p

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: ft_p.h
libs/libft/: Makefile  libft.h
src/: ft_p.h
src/client/: client.c  client.h  interface.c  main.c
src/client/handler/: ls.c
src/server/: accept.c  main.c  server.c
src/shared/: cmd.c  cmd_parse.c  cmd_stringify.c  ft_strjoin_free.c  parse.c  receive.c  send.c  shared.h  socket.c  stringify.c
src/shared/cmd_handler/: default.c  get.c  ls.c
src/shared/utils/: exit.c
