cmake_minimum_required(VERSION 3.14)
project(42_ft_p C)

set(CMAKE_C_STANDARD 11)

include_directories(libs/ft_printf/inc)
include_directories(libs/get_next_line)
include_directories(libs/libft)
include_directories(src)

set(CMAKE_C_FLAGS "-Wall -Wextra -Werror")

add_executable(client
	libs/ft_printf/inc/ft_printf.h
	libs/ft_printf/src/checker.c
	libs/ft_printf/src/conv_init.c
	libs/ft_printf/src/dispatch.c
	libs/ft_printf/src/display.c
	libs/ft_printf/src/flags.c
	libs/ft_printf/src/flags_init.c
	libs/ft_printf/src/ft_atoi.c
	libs/ft_printf/src/ft_itoa_base.c
	libs/ft_printf/src/ft_memalloc.c
	libs/ft_printf/src/ft_memset.c
	libs/ft_printf/src/ft_printf.c
	libs/ft_printf/src/ft_putchar.c
	libs/ft_printf/src/ft_putchar_fd.c
	libs/ft_printf/src/ft_putstr.c
	libs/ft_printf/src/ft_putstr_fd.c
	libs/ft_printf/src/ft_strdup.c
	libs/ft_printf/src/ft_strjoin.c
	libs/ft_printf/src/ft_strlen.c
	libs/ft_printf/src/ft_strnew.c
	libs/ft_printf/src/ft_strsub.c
	libs/ft_printf/src/ft_uitoa_base.c
	libs/ft_printf/src/get_intmax.c
	libs/ft_printf/src/get_uintmax.c
	libs/ft_printf/src/render_char.c
	libs/ft_printf/src/render_double.c
	libs/ft_printf/src/render_hex.c
	libs/ft_printf/src/render_nbr.c
	libs/ft_printf/src/render_octal.c
	libs/ft_printf/src/render_pointer.c
	libs/ft_printf/src/render_str.c
	libs/ft_printf/src/render_unsigned.c
	libs/libft/get_next_line.c
	libs/libft/get_next_line.h
	libs/libft/ft_atoi.c
	libs/libft/ft_bzero.c
	libs/libft/ft_isalnum.c
	libs/libft/ft_isalpha.c
	libs/libft/ft_isascii.c
	libs/libft/ft_isdigit.c
	libs/libft/ft_isprint.c
	libs/libft/ft_itoa.c
	libs/libft/ft_lstadd.c
	libs/libft/ft_lstdel.c
	libs/libft/ft_lstdelone.c
	libs/libft/ft_lstiter.c
	libs/libft/ft_lstmap.c
	libs/libft/ft_lstnew.c
	libs/libft/ft_memalloc.c
	libs/libft/ft_memccpy.c
	libs/libft/ft_memchr.c
	libs/libft/ft_memcmp.c
	libs/libft/ft_memcpy.c
	libs/libft/ft_memdel.c
	libs/libft/ft_memmove.c
	libs/libft/ft_memset.c
	libs/libft/ft_putchar.c
	libs/libft/ft_putchar_fd.c
	libs/libft/ft_putendl.c
	libs/libft/ft_putendl_fd.c
	libs/libft/ft_putnbr.c
	libs/libft/ft_putnbr_fd.c
	libs/libft/ft_putstr.c
	libs/libft/ft_putstr_fd.c
	libs/libft/ft_strcat.c
	libs/libft/ft_strchr.c
	libs/libft/ft_strclr.c
	libs/libft/ft_strcmp.c
	libs/libft/ft_strcpy.c
	libs/libft/ft_strdel.c
	libs/libft/ft_strdup.c
	libs/libft/ft_strequ.c
	libs/libft/ft_striter.c
	libs/libft/ft_striteri.c
	libs/libft/ft_strjoin.c
	libs/libft/ft_strlcat.c
	libs/libft/ft_strlen.c
	libs/libft/ft_strmap.c
	libs/libft/ft_strmapi.c
	libs/libft/ft_strncat.c
	libs/libft/ft_strncmp.c
	libs/libft/ft_strncpy.c
	libs/libft/ft_strnequ.c
	libs/libft/ft_strnew.c
	libs/libft/ft_strnstr.c
	libs/libft/ft_strrchr.c
	libs/libft/ft_strsplit.c
	libs/libft/ft_strstr.c
	libs/libft/ft_strsub.c
	libs/libft/ft_strtrim.c
	libs/libft/ft_tolower.c
	libs/libft/ft_toupper.c
	libs/libft/libft.h
	src/client/main.c
	src/ft_p.h src/client/client.c src/shared/socket.c)

add_executable(server
	libs/ft_printf/inc/ft_printf.h
	libs/ft_printf/src/checker.c
	libs/ft_printf/src/conv_init.c
	libs/ft_printf/src/dispatch.c
	libs/ft_printf/src/display.c
	libs/ft_printf/src/flags.c
	libs/ft_printf/src/flags_init.c
	libs/ft_printf/src/ft_atoi.c
	libs/ft_printf/src/ft_itoa_base.c
	libs/ft_printf/src/ft_memalloc.c
	libs/ft_printf/src/ft_memset.c
	libs/ft_printf/src/ft_printf.c
	libs/ft_printf/src/ft_putchar.c
	libs/ft_printf/src/ft_putchar_fd.c
	libs/ft_printf/src/ft_putstr.c
	libs/ft_printf/src/ft_putstr_fd.c
	libs/ft_printf/src/ft_strdup.c
	libs/ft_printf/src/ft_strjoin.c
	libs/ft_printf/src/ft_strlen.c
	libs/ft_printf/src/ft_strnew.c
	libs/ft_printf/src/ft_strsub.c
	libs/ft_printf/src/ft_uitoa_base.c
	libs/ft_printf/src/get_intmax.c
	libs/ft_printf/src/get_uintmax.c
	libs/ft_printf/src/render_char.c
	libs/ft_printf/src/render_double.c
	libs/ft_printf/src/render_hex.c
	libs/ft_printf/src/render_nbr.c
	libs/ft_printf/src/render_octal.c
	libs/ft_printf/src/render_pointer.c
	libs/ft_printf/src/render_str.c
	libs/ft_printf/src/render_unsigned.c
	libs/libft/get_next_line.c
	libs/libft/get_next_line.h
	libs/libft/ft_atoi.c
	libs/libft/ft_bzero.c
	libs/libft/ft_isalnum.c
	libs/libft/ft_isalpha.c
	libs/libft/ft_isascii.c
	libs/libft/ft_isdigit.c
	libs/libft/ft_isprint.c
	libs/libft/ft_itoa.c
	libs/libft/ft_lstadd.c
	libs/libft/ft_lstdel.c
	libs/libft/ft_lstdelone.c
	libs/libft/ft_lstiter.c
	libs/libft/ft_lstmap.c
	libs/libft/ft_lstnew.c
	libs/libft/ft_memalloc.c
	libs/libft/ft_memccpy.c
	libs/libft/ft_memchr.c
	libs/libft/ft_memcmp.c
	libs/libft/ft_memcpy.c
	libs/libft/ft_memdel.c
	libs/libft/ft_memmove.c
	libs/libft/ft_memset.c
	libs/libft/ft_putchar.c
	libs/libft/ft_putchar_fd.c
	libs/libft/ft_putendl.c
	libs/libft/ft_putendl_fd.c
	libs/libft/ft_putnbr.c
	libs/libft/ft_putnbr_fd.c
	libs/libft/ft_putstr.c
	libs/libft/ft_putstr_fd.c
	libs/libft/ft_strcat.c
	libs/libft/ft_strchr.c
	libs/libft/ft_strclr.c
	libs/libft/ft_strcmp.c
	libs/libft/ft_strcpy.c
	libs/libft/ft_strdel.c
	libs/libft/ft_strdup.c
	libs/libft/ft_strequ.c
	libs/libft/ft_striter.c
	libs/libft/ft_striteri.c
	libs/libft/ft_strjoin.c
	libs/libft/ft_strlcat.c
	libs/libft/ft_strlen.c
	libs/libft/ft_strmap.c
	libs/libft/ft_strmapi.c
	libs/libft/ft_strncat.c
	libs/libft/ft_strncmp.c
	libs/libft/ft_strncpy.c
	libs/libft/ft_strnequ.c
	libs/libft/ft_strnew.c
	libs/libft/ft_strnstr.c
	libs/libft/ft_strrchr.c
	libs/libft/ft_strsplit.c
	libs/libft/ft_strstr.c
	libs/libft/ft_strsub.c
	libs/libft/ft_strtrim.c
	libs/libft/ft_tolower.c
	libs/libft/ft_toupper.c
	libs/libft/libft.h
	src/server/main.c
	src/ft_p.h src/client/client.c src/shared/socket.c)
